<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".CreateNoteFragment">

        <ImageView
            android:id="@+id/img_back_btn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/purple_500" />

        <ImageView
            android:id="@+id/img_save_btn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/purple_500" />

        <EditText
            android:id="@+id/note_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/background"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/add_note_title"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:shadowColor="@color/purple_500"
            android:textColor="@color/purple_500"
            android:textColorHint="@color/purple_200"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_back_btn" />

        <TextView
            android:id="@+id/note_date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/note_date"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_title_et" />


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_date_tv">

            <View
                android:id="@+id/card_view_color"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@color/purple_500" />

            <EditText
                android:id="@+id/note_sub_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/add_note_sub_title"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/purple_500"
                android:textColorHint="@color/purple_200"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/note_image_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear">

            <ImageView
                android:id="@+id/deleteImage"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/note_image"
                android:layout_margin="@dimen/_10sdp"
                android:visibility="gone"
                android:src="@drawable/ic_delete" />

            <ImageView
                android:id="@+id/note_image"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:visibility="visible" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/note_web_link_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_image_lin">
            <ImageView
                android:id="@+id/note_delete_link_btn"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:visibility="gone"
                android:src="@drawable/ic_delete" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/note_web_link_et"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/web_link_url"
                    android:inputType="textMultiLine"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_200"
                    android:textSize="@dimen/_12ssp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <Button
                        android:id="@+id/note_web_link_cancel_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textColor="@color/purple_500"
                        app:backgroundTint="@color/light_purple" />

                    <Button
                        android:id="@+id/note_web_link_add_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:text="@string/add"
                        app:backgroundTint="@color/purple_500" />


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/note_web_link_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/web_link_url"
            android:autoLink="web"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_web_link_lin" />


        <EditText
            android:id="@+id/note_text_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/add_note_text"
            android:inputType="textMultiLine"
            android:textColor="@color/purple_500"
            android:textColorHint="@color/purple_200"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_web_link_tv" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageMore"
                android:layout_width="@dimen/_34sdp"
                android:layout_height="@dimen/_34sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_up" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>