<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_peekHeight="40dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:background="@color/light_purple"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:layout_gravity="center" >
            <ImageView
                android:id="@+id/imageMoreDown"
                android:layout_width="@dimen/_34sdp"
                android:layout_height="@dimen/_34sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_up"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/fNote1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_1" />

                <ImageView
                    android:id="@+id/fNote1_color"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fNote2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_2" />

                <ImageView
                    android:id="@+id/fNote2_color"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fNote3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_3" />

                <ImageView
                    android:id="@+id/fNote3_color"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fNote4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_4" />

                <ImageView
                    android:id="@+id/fNote4_color"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fNote5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_5" />

                <ImageView
                    android:id="@+id/fNote5_color"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fNote6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_6" />

                <ImageView
                    android:id="@+id/fNote6_color"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fNote7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_7" />

                <ImageView
                    android:id="@+id/fNote7_color"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_note_image_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="horizontal"
            android:gravity="center">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/image"
                app:tint="@color/purple_500" />
            <TextView
                android:id="@+id/name_img_selected_from_galary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/image_file_name"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/roboto_medium" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/add_note_link_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="horizontal"
            android:gravity="center">


            <ImageView
                android:id="@+id/linkimgView"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/link"
                app:tint="@color/purple_500" />
            <TextView
                android:id="@+id/name_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/link_url"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/roboto_medium" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/delete_this_note_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:gravity="center">


            <ImageView
                android:id="@+id/deletethisNoteImg"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_delete"
                app:tint="@color/purple_500" />
            <TextView
                android:id="@+id/deleteThisNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/delete_note"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/roboto_medium" />

        </LinearLayout>

    </LinearLayout>
</layout>